fix alignment of footer main content

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -523,6 +523,7 @@ footer {
     .footer-main {
         grid-row: 1;
         grid-column: 2 / span 2;
+        margin-right: auto;
     }
 
     .footer-social-links {
